@@ -1,3 +1,11 @@
+Wed Jun 16 10:36:10 UTC 2010  Martin Corino  <mcorino@remedy.nl>
+
+        * DAnCE/tools/Split_Plan/Split_Plan.cpp:
+        * DAnCE/tools/Split_Plan/Sub_UUID_Generator.cpp:
+        * DAnCE/tools/Split_Plan/Sub_UUID_Generator.h:
+	  Changed to use a simpler way to generate unique sub plan
+          ids which are more readable as well.
+
 Wed Jun 16 09:17:26 UTC 2010  Marcel Smit  <msmit@remedy.nl>
 
         * connectors/dds4ccm/tutorials/Shapes/Shapes_asm/ShapesControl_comp:
